Fix checks counter: drop leading zero, animate from 0, align shadow

--- a/src/components/reactbits/Counter.css
+++ b/src/components/reactbits/Counter.css
@@ -35,8 +35,16 @@
   right: 0;
 }
 
+.top-gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 .bottom-gradient {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
 }
